tests/ui/auto-traits/opaque_type_candidate_selection.old.stderr
error[E0119]: conflicting implementations of trait `Trait<_>`
  --> $DIR/opaque_type_candidate_selection.rs:28:1
   |
LL | impl<T> Trait<T> for T {
   | ---------------------- first implementation here
...
LL | impl<T> Trait<T> for defining_scope::Alias<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
